Links to the user under which one logged in and logout links are aligned and look as they should be (fixed correct user name). Username is a linke that forwards a person to the user account view page.

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -61,3 +61,22 @@ button.btn, input.btn[type="submit"] {
 .question-on-form {
     border-top: solid black 1px;
 }
+.logout-item {
+    display: block;
+    padding: 10px 10px 11px;
+}
+.logout-item > a {
+    color: #999999;
+    float: none;
+    line-height: 19px;
+    padding-left: 10px;
+    text-decoration: none;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+.logout-item > a:hover {
+    backgroun-color: transparent;
+    color:#ffffff;
+    text-decoration: none;
+}
+
+
